--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -21,13 +21,13 @@
 <li>
     <a href="#"><i class="icon-lifebuoy"></i> <span>Equipment</span></a>
     <ul>
-        <li><%= link_to "Equipments Management", "" %></li>
+        <li><%= link_to "Equipment List", "" %></li>
     </ul>
 </li>
 <li>
     <a href="#"><i class="icon-notification2"></i> <span>Notification</span></a>
     <ul>
-        <li><%= link_to "Notification Management", "" %></li>
+        <li><%= link_to "Notification List", "" %></li>
     </ul>
 </li>
 <li>
@@ -45,9 +45,9 @@
     </ul>
 </li>
 <li>
-    <a href="#"><i class="icon-people"></i> <span>Recruitment</span></a>
+    <a href="#"><i class="icon-people"></i> <span>Career</span></a>
     <ul>
-        <li><%= link_to "Recruitment Management", "" %></li>
+        <li><%= link_to "Career List", "" %></li>
     </ul>
 </li>
 <li>
