push construction backend

--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -13,9 +13,8 @@
 <li>
     <a href="#"><i class="icon-steering-wheel"></i> <span>Construction</span></a>
     <ul>
-        <li><%= link_to "Completed construction projects", "" %></li>
-        <li><%= link_to "Under construction projects", "" %></li>
-        <li><%= link_to "Investment projects", "" %></li>
+        <li><%= link_to "Projects Management", admin_projects_path %></li>
+        <li><%= link_to "Tags Management", admin_project_tags_path %></li>
     </ul>
 </li>
 <li>
