--- a/app/views/admin/project_tags/show.html.erb
+++ b/app/views/admin/project_tags/show.html.erb
@@ -1,24 +1,163 @@
-<p id="notice"><%= notice %></p>
+<!-- Main navbar -->
+    <%= render "/admin/main/navbar" %>
+<!-- /main navbar -->
 
-<p>
-  <strong>Title vn:</strong>
-  <%= @project_tag.title_vn %>
-</p>
+<!-- Page container -->
+<div class="page-container">
 
-<p>
-  <strong>Content vn:</strong>
-  <%= @project_tag.content_vn %>
-</p>
+    <!-- Page content -->
+    <div class="page-content">
 
-<p>
-  <strong>Title en:</strong>
-  <%= @project_tag.title_en %>
-</p>
+        <!-- Main sidebar -->
+        <div class="sidebar sidebar-main">
+            <div class="sidebar-content">
 
-<p>
-  <strong>Content en:</strong>
-  <%= @project_tag.content_en %>
-</p>
+                <!-- User menu -->
+                    <%= render '/admin/main/user_menu' %>
+                <!-- /user menu -->
 
-<%= link_to 'Edit', edit_project_tag_path(@project_tag) %> |
-<%= link_to 'Back', project_tags_path %>
+                <!-- Main navigation -->
+                <div class="sidebar-category sidebar-category-visible">
+                    <div class="category-content no-padding">
+                        <ul class="navigation navigation-main navigation-accordion">
+
+                            <!-- Main menu-->
+                                <%= render "/admin/main/main_menu" %>
+                            <!-- /main menu -->
+
+                        </ul>
+                    </div>
+                </div>
+                <!-- /main navigation -->
+
+            </div>
+        </div>
+        <!-- /main sidebar -->
+
+        <!-- Main content -->
+        <div class="content-wrapper">
+
+            <!-- Page header -->
+            <div class="page-header">
+                <div class="page-header-content">
+                    <div class="page-title">
+                        <h4><span class="text-semibold">Home - Dashboard</span></h4>
+                    </div>
+                </div>
+
+                <div class="breadcrumb-line">
+                    <ul class="breadcrumb">
+                        <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
+                        <li><%= link_to "Construction", admin_project_tags_path %></li>
+                        <li><%= link_to "Tags Management", admin_project_tags_path %></li>
+                        <li class="active"><%= @project_tag.title_vn + " - " + @project_tag.title_en %></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /page header -->
+            
+            <!-- Content area -->
+            <div class="content">
+                <!-- Basic datatable -->
+                <div class="panel panel-flat">
+                    <div class="panel-heading">
+                        <h5 class="panel-title"><span class="text-semibold"><%= @project_tag.title_vn + " - " + @project_tag.title_en %></span></h5><br/>
+                        
+                        <p class="color-red"><%= notice %></p><br/>
+                        
+                        <div class="tabbable tab-content-bordered">
+                            <ul class="nav nav-tabs bg-primary">
+                                <li class="active"><a href="#control-tab1" data-toggle="tab">Tiếng Việt</a></li>
+                                <li><a href="#control-tab2" data-toggle="tab">English </a></li>
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane has-padding active" id="control-tab1">
+                                    <form class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <%= label "", "Title: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project_tag.title_vn %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Description: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static text-justify") do %>
+                                                  <%= @project_tag.content_vn.html_safe %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Created At: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project_tag.created_at.strftime("%d/%m/%Y") %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                    
+                                <div class="tab-pane has-padding" id="control-tab2">
+                                    <form class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <%= label "", "Title: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project_tag.title_en %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Content: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static text-justify") do %>
+                                                  <%= @project_tag.content_en.html_safe %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Created At: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project_tag.created_at.strftime("%d/%m/%Y") %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <%= link_to '<i class="icon-backward2 position-left"></i> Back'.html_safe, admin_project_tags_path, class: "btn btn-primary margin-submit" %>
+                    </div>
+                </div>
+                <!-- /basic datatable -->
+
+                <!-- Footer -->
+                <div class="footer text-muted">
+                    <%= render "/admin/main/footer" %>
+                </div>
+                <!-- /footer -->
+                
+            </div>
+            <!-- /content area -->
+
+        </div>
+        <!-- /main content -->
+
+    </div>
+    <!-- /page content -->
+
+</div>
+<!-- /page container -->
+
+<!-- Theme JS files -->
+<%= javascript_include_tag '/backend/assets/js/plugins/tables/datatables/datatables.min.js' %>
+<%= javascript_include_tag '/backend/assets/js/plugins/forms/selects/select2.min.js' %>
+
+<%= javascript_include_tag '/backend/assets/js/core/app.js' %>
+<%= javascript_include_tag '/backend/assets/javascripts/datatables_types.js' %>
+<!-- /theme JS files -->
