--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -31,7 +31,14 @@
     <%= javascript_include_tag '/backend/assets/js/core/libraries/jquery.min.js' %>
     <%= javascript_include_tag '/backend/assets/js/core/libraries/bootstrap.min.js' %>
     <%= javascript_include_tag '/backend/assets/js/plugins/loaders/blockui.min.js' %>
+	
+	<%= javascript_include_tag '/backend/assets/inputmask/jquery.inputmask.min.js' %>
+	<%= javascript_include_tag '/backend/assets/inputmask/inputmask.js' %>
+    <%= javascript_include_tag '/backend/assets/inputmask/jquery.inputmask.js' %>
+    <%= javascript_include_tag '/backend/assets/inputmask/inputmask.numeric.extensions.js' %>
 	<!-- /core JS files -->
+	
+	<%= render "layouts/head_script" %>
 
 </head>
 
