--- a/app/views/admin/project_tags/_form.html.erb
+++ b/app/views/admin/project_tags/_form.html.erb
@@ -1,33 +1,56 @@
-<%= form_for(@project_tag) do |f| %>
-  <% if @project_tag.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@project_tag.errors.count, "error") %> prohibited this project_tag from being saved:</h2>
+<% if @project_tag.errors.any? %>
+  <div id="error_explanation">
+    <% @project_tag.errors.full_messages.each do |message| %>
+      <p class="label label-warning"><%= message %></p>
+    <% end %>
+  </div>
+<% end %>
 
-      <ul>
-      <% @project_tag.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= form_for [:admin, @project_tag], html: {class: "form-horizontal"} do |f| %>
+    
+    <div class="tabbable tab-content-bordered">
+        <ul class="nav nav-tabs bg-primary">
+            <li class="active"><a href="#control-tab1" data-toggle="tab">Tiếng Việt</a></li>
+            <li><a href="#control-tab2" data-toggle="tab">English </a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane has-padding active" id="control-tab1">
+                    
+                <div class="form-group">
+                    <%= f.label "Title: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :title_vn, class: "form-control" %>
+                    </div>
+                </div>
+            
+                <div class="form-group">
+                    <%= f.label "Description: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_area :content_vn, rows: "5", cols: "5", class: "form-control" %>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane has-padding" id="control-tab2">
+                <div class="form-group">
+                    <%= f.label "Title: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :title_en, class: "form-control" %>
+                    </div>
+                </div>
+                    
+                <div class="form-group">
+                    <%= f.label "Description: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_area :content_en, rows: "5", cols: "5", class: "form-control" %>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :title_vn %><br>
-    <%= f.text_field :title_vn %>
-  </div>
-  <div class="field">
-    <%= f.label :content_vn %><br>
-    <%= f.text_area :content_vn %>
-  </div>
-  <div class="field">
-    <%= f.label :title_en %><br>
-    <%= f.text_field :title_en %>
-  </div>
-  <div class="field">
-    <%= f.label :content_en %><br>
-    <%= f.text_area :content_en %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="text-right margin-submit">
+        <%= button_tag 'Save <i class="icon-plus22 position-right"></i>'.html_safe, class: "btn btn-primary"%>
+        <%= link_to 'Cancel <i class="icon-cross2"></i>'.html_safe, admin_project_tags_path,class: "btn bg-warning-400"%>
+    </div>
 <% end %>
