--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,49 +1,146 @@
-<p id="notice"><%= notice %></p>
+<!-- Main navbar -->
+    <%= render "/admin/main/navbar" %>
+<!-- /main navbar -->
 
-<h1>Listing Projects</h1>
+<!-- Page container -->
+<div class="page-container">
 
-<table>
-  <thead>
-    <tr>
-      <th>Image url</th>
-      <th>Name vn</th>
-      <th>Name en</th>
-      <th>Total value</th>
-      <th>Cost performance</th>
-      <th>Start at</th>
-      <th>End at</th>
-      <th>Name company</th>
-      <th>Name country</th>
-      <th>Tag</th>
-      <th>Content vn</th>
-      <th>Content en</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <!-- Page content -->
+    <div class="page-content">
 
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.image_url %></td>
-        <td><%= project.name_vn %></td>
-        <td><%= project.name_en %></td>
-        <td><%= project.total_value %></td>
-        <td><%= project.cost_performance %></td>
-        <td><%= project.start_at %></td>
-        <td><%= project.end_at %></td>
-        <td><%= project.name_company %></td>
-        <td><%= project.name_country %></td>
-        <td><%= project.tag_id %></td>
-        <td><%= project.content_vn %></td>
-        <td><%= project.content_en %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <!-- Main sidebar -->
+        <div class="sidebar sidebar-main">
+            <div class="sidebar-content">
 
-<br>
+                <!-- User menu -->
+                    <%= render '/admin/main/user_menu' %>
+                <!-- /user menu -->
 
-<%= link_to 'New Project', new_project_path %>
+                <!-- Main navigation -->
+                <div class="sidebar-category sidebar-category-visible">
+                    <div class="category-content no-padding">
+                        <ul class="navigation navigation-main navigation-accordion">
+
+                            <!-- Main menu-->
+                                <%= render "/admin/main/main_menu" %>
+                            <!-- /main menu -->
+
+                        </ul>
+                    </div>
+                </div>
+                <!-- /main navigation -->
+
+            </div>
+        </div>
+        <!-- /main sidebar -->
+
+        <!-- Main content -->
+        <div class="content-wrapper">
+
+            <!-- Page header -->
+            <div class="page-header">
+                <div class="page-header-content">
+                    <div class="page-title">
+                        <h4><span class="text-semibold">Home - Dashboard</span></h4>
+                    </div>
+                </div>
+
+                <div class="breadcrumb-line">
+                    <ul class="breadcrumb">
+                        <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, { controller: "main", action: "index" }  %></li>
+                        <li><%= link_to "Construction", admin_projects_path %></li>
+                        <li class="active">Projects Management</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /page header -->
+            
+            <!-- Content area -->
+            <div class="content">
+                <!-- Basic datatable -->
+                <div class="panel panel-flat">
+                    <div class="panel-heading">
+                        <%= link_to '<i class="glyphicon glyphicon-plus"></i>  New Project'.html_safe, new_admin_project_path, class: 'btn bg-teal' %>
+                        <hr/>
+                        <h5 class="panel-title">Listing Projects</h5>
+                    </div>
+                    
+                    <table class="table datatable-projects">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Total Value<br/>Cost Performance</th>
+                                <th>Start<br/>Finish</th>
+                                <th>Status</th>
+                                <th>Created At</th>
+                                <th class="text-center">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% @projects.each do |item| %>
+                                <tr>
+                                    <td>
+                                        <%= link_to item.name_vn, [:admin, item] %><br/>
+                                        <%= link_to item.name_en, [:admin, item] %>
+                                    </td>
+                                    <td>
+                                        <%= number_with_delimiter item.total_value.to_i %><br/>
+                                        <%= number_with_delimiter item.cost_performance.to_i %>
+                                    </td>
+                                    <td>
+                                        
+                                    </td>
+                                    <td>
+                                        <span class="label label-info"><%= item.project_tag.title_vn %></span><br/>
+                                        <span class="label label-info"><%= item.project_tag.title_en %></span>
+                                    </td>
+                                    <td><%= item.created_at.strftime("%d/%m/%Y") %></td>
+                                    <td class="text-center">
+                                        <ul class="icons-list">
+                                            <li class="dropdown">
+                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                                    <i class="icon-menu9"></i>
+                                                </a>
+                                                <ul class="dropdown-menu dropdown-menu-right">
+                                                    <li>
+                                                      <%= link_to '<i class="glyphicon glyphicon-edit"></i> Edit'.html_safe, edit_admin_project_path(item) %>
+                                                    </li>
+                                                    <li>
+                                                      <%= link_to '<i class="icon-cross2"></i> Destroy'.html_safe, [:admin, item], method: :delete, data: {confirm: 'Are you sure?'} %>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            <% end %>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /basic datatable -->
+
+                <!-- Footer -->
+                <div class="footer text-muted">
+                    <%= render "/admin/main/footer" %>
+                </div>
+                <!-- /footer -->
+                
+            </div>
+            <!-- /content area -->
+
+        </div>
+        <!-- /main content -->
+
+    </div>
+    <!-- /page content -->
+
+</div>
+<!-- /page container -->
+
+<!-- Theme JS files -->
+<%= javascript_include_tag '/backend/assets/js/plugins/tables/datatables/datatables.min.js' %>
+<%= javascript_include_tag '/backend/assets/js/plugins/forms/selects/select2.min.js' %>
+
+<%= javascript_include_tag '/backend/assets/js/core/app.js' %>
+<%= javascript_include_tag '/backend/assets/javascripts/datatables_projects.js' %>
+<!-- /theme JS files -->
