--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -1,64 +1,235 @@
-<p id="notice"><%= notice %></p>
+<!-- Main navbar -->
+    <%= render "/admin/main/navbar" %>
+<!-- /main navbar -->
 
-<p>
-  <strong>Image url:</strong>
-  <%= @project.image_url %>
-</p>
+<!-- Page container -->
+<div class="page-container">
 
-<p>
-  <strong>Name vn:</strong>
-  <%= @project.name_vn %>
-</p>
+    <!-- Page content -->
+    <div class="page-content">
 
-<p>
-  <strong>Name en:</strong>
-  <%= @project.name_en %>
-</p>
+        <!-- Main sidebar -->
+        <div class="sidebar sidebar-main">
+            <div class="sidebar-content">
 
-<p>
-  <strong>Total value:</strong>
-  <%= @project.total_value %>
-</p>
+                <!-- User menu -->
+                    <%= render '/admin/main/user_menu' %>
+                <!-- /user menu -->
 
-<p>
-  <strong>Cost performance:</strong>
-  <%= @project.cost_performance %>
-</p>
+                <!-- Main navigation -->
+                <div class="sidebar-category sidebar-category-visible">
+                    <div class="category-content no-padding">
+                        <ul class="navigation navigation-main navigation-accordion">
 
-<p>
-  <strong>Start at:</strong>
-  <%= @project.start_at %>
-</p>
+                            <!-- Main menu-->
+                                <%= render "/admin/main/main_menu" %>
+                            <!-- /main menu -->
 
-<p>
-  <strong>End at:</strong>
-  <%= @project.end_at %>
-</p>
+                        </ul>
+                    </div>
+                </div>
+                <!-- /main navigation -->
 
-<p>
-  <strong>Name company:</strong>
-  <%= @project.name_company %>
-</p>
+            </div>
+        </div>
+        <!-- /main sidebar -->
 
-<p>
-  <strong>Name country:</strong>
-  <%= @project.name_country %>
-</p>
+        <!-- Main content -->
+        <div class="content-wrapper">
 
-<p>
-  <strong>Tag:</strong>
-  <%= @project.tag_id %>
-</p>
+            <!-- Page header -->
+            <div class="page-header">
+                <div class="page-header-content">
+                    <div class="page-title">
+                        <h4><span class="text-semibold">Home - Dashboard</span></h4>
+                    </div>
+                </div>
 
-<p>
-  <strong>Content vn:</strong>
-  <%= @project.content_vn %>
-</p>
+                <div class="breadcrumb-line">
+                    <ul class="breadcrumb">
+                        <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
+                        <li><%= link_to "Construction", admin_projects_path %></li>
+                        <li><%= link_to "Project Management", admin_projects_path %></li>
+                        <li class="active"><%= @project.name_vn + " - " + @project.name_en %></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /page header -->
+            
+            <!-- Content area -->
+            <div class="content">
+                <!-- Basic datatable -->
+                <div class="panel panel-flat">
+                    <div class="panel-heading">
+                        <h5 class="panel-title"><span class="text-semibold"><%= @project.name_vn + " - " + @project.name_en %></span></h5><br/>
+                        
+                        <p class="color-red"><%= notice %></p><br/>
+                        
+                        <div class="tabbable tab-content-bordered">
+                            <ul class="nav nav-tabs bg-primary">
+                                <li class="active"><a href="#control-tab1" data-toggle="tab">Tiếng Việt</a></li>
+                                <li><a href="#control-tab2" data-toggle="tab">English </a></li>
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane has-padding active" id="control-tab1">
+                                    <form class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <%= label "", "Project Type: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project.project_tag.title_vn %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Name: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project.name_vn %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Total Value: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= number_with_delimiter @project.total_value.to_i %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Start at: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                    Start at
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "End at: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                    End at
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Company Name: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                    <%= @project.name_company %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Country Name: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                    <%= @project.name_country %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Cost Performance: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= number_with_delimiter @project.cost_performance.to_i %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Content: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static text-justify") do %>
+                                                  <%= @project.content_vn.html_safe %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Created At: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project.created_at.strftime("%d/%m/%Y") %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                    
+                                <div class="tab-pane has-padding" id="control-tab2">
+                                    <form class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <%= label "", "Project Type: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project.project_tag.title_en %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Name: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                  <%= @project.name_en %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Company Name: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                    <%= @project.name_company_en %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Country Name: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static") do %>
+                                                    <%= @project.name_country_en %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <%= label "", "Content: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= content_tag(:p, class: "form-control-static text-justify") do %>
+                                                  <%= @project.content_en.html_safe %>
+                                                <% end %>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <%= link_to '<i class="icon-backward2 position-left"></i> Back'.html_safe, admin_projects_path, class: "btn btn-primary margin-submit" %>
+                    </div>
+                </div>
+                <!-- /basic datatable -->
 
-<p>
-  <strong>Content en:</strong>
-  <%= @project.content_en %>
-</p>
+                <!-- Footer -->
+                <div class="footer text-muted">
+                    <%= render "/admin/main/footer" %>
+                </div>
+                <!-- /footer -->
+                
+            </div>
+            <!-- /content area -->
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+        </div>
+        <!-- /main content -->
+
+    </div>
+    <!-- /page content -->
+
+</div>
+<!-- /page container -->
+
+<!-- Theme JS files -->
+<%= javascript_include_tag '/backend/assets/js/plugins/tables/datatables/datatables.min.js' %>
+<%= javascript_include_tag '/backend/assets/js/plugins/forms/selects/select2.min.js' %>
+
+<%= javascript_include_tag '/backend/assets/js/core/app.js' %>
+<%= javascript_include_tag '/backend/assets/javascripts/datatables_types.js' %>
+<!-- /theme JS files -->
